src/assets/styles/common.scss
/* ... */
/*--------------------------------------------------------------
# Intro Section
--------------------------------------------------------------*/
.section-title {
  text-align: center;
  padding-bottom: 30px;
  h2 {
    font-size: 38px;
  }
}

/*--------------------------------------------------------------
# Carousel Section
--------------------------------------------------------------*/

/* Carousel Slider Styles Starts */
.carousel {
  padding-top: 100px;
  margin-bottom: 80px;
  @media only screen and (max-width: 768px) {
    margin-bottom: 30px;
  }
  .carousel-indicators li {
    background-color: #ddd;
    height: 5px;
    &.active {
      background-color: #e30045;
    }
  }
  .carousel-inner {
    .carousel-item {
      position: relative;
      top: 0;
      height: 580px;
      width: 100%;
      @media only screen and (max-width: 990px) {
        height: 620px;
      }
      .carousel-caption {
        top: auto;
        bottom: auto;
        left: auto;
        right: auto;
        text-align: left;
        .hero-text {
          color: #636363;
          margin: 10px 0 56px 0;
          font-size: 27px;
          font-family: $primary-font-regular;
        }
        .animated {
          animation: up-down 2s ease-in-out infinite alternate-reverse both;
        }
      }
    }
  }
}
/* Carousel Slider Styles End */

.carousel-card {
  //width: 405px;
  width: 408px;
  height: 560px;
  box-shadow: 0px 3px 20px #0000000f;
  border-radius: 20px;
  margin: 0 20px;
  transition: 0.3s;
  background: #fff;
  margin-bottom: 40px;
  // cursor: pointer;
  @media only screen and (max-width: 768px) {
    margin: 0 0px;
  }
  &:hover {
    transform: scale(1.08);
    box-shadow: 0px 0 30px rgb(1 41 112 / 10%);
    @media only screen and (max-width: 768px) {
      transform: none;
    }
  }
  .icons {
    text-align: center;
    cursor: pointer;
    position: absolute;
    background: #fcfafa;
    border-radius: 20px;
    margin: 20px 25px;
    padding: 5px 7px 7px;
    height: 35px;
    width: 35px;
    &.bookmark {
      right: 0;
    }
    &.labelRed,
    &.timer {
      bottom: 20px;
      width: auto;
      background: $primary-color;
      border-radius: 0px;
      color: $white;
      margin: 10px 10px;
      font-size: 12px;
      height: auto;
      padding: 2px 7px;
    }
    &.timer {
      right: 0;
      background: #00000090;
      border: 1px solid $white;
      border-radius: 2px;
      span {
        margin-left: 5px;
        vertical-align: middle;
      }
    }
  }
  .header-image {
    height: 180px;
    width: 100%;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    border-bottom: 1px solid #f3f3f3;
  }
  .card-footer {
    background: none;
    border: 0 none;
    padding: 10px 0 30px;
    img {
      cursor: pointer;
    }
  }
  .content {
    padding: 0 30px;
    .title {
      font-size: 20px;
      font-family: $cardtitle-font;
      line-height: 23px;
      min-height: 70px;
      margin-top: 20px;
      p {
        font-family: $primary-font-medium;
        font-size: 14px;
        span {
          font-family: $primary-font-regular;
          color: #9b9b9b;
        }
      }
    }
    .description {
      font-family: $primary-font-light;
      font-size: 14px;
    }
  }
}
.content-bg {
  background: #f3f3f3;
}

/*--------------------------------------------------------------
# Button Styles
--------------------------------------------------------------*/
.button {
  border-radius: 42px;
  height: 60px;
  width: 222px;
  font-family: $primary-font-bold;
  font-size: 19px;
  border: 2px solid $primary-color;
  transition: all 0.35s ease-in-out;

  &.primary {
    background-color: $primary-color;
    color: $white;
    margin-right: 15px;
  }

  &.secondary {
    background-color: $white;
    color: $primary-color;
  }
  &.tertiary {
    border-radius: 8px !important;
    background-color: $primary-color;
    color: $white;
    width: 170px;
    height: 50px;
    font-size: 16px;
  }
  &.primary-btn-sm {
    width: 132px;
    height: 32px;
    border-radius: 18px;
    font-size: 14px;
    font-family: $cardtitle-font;
    color: $white;
    border: 1px solid $primary-color;
    background: $primary-color;
    padding: 6px 10px;
  }
  &.secondary-btn-md {
    font-size: 18px;
    height: 45px;
    color: $primary-color;
    background-color: $white;
    font-family: $cardtitle-font;
    width: auto;
    padding: 0 33px;
    &.cta {
      color: $white;
      background-color: $primary-color;
    }
  }
  &.secondary-btn-sm {
    width: 132px;
    height: 32px;
    border-radius: 18px;
    font-size: 14px;
    font-family: $cardtitle-font;
    color: $primary-color;
    border: 1px solid $primary-color;
    background-color: $white;
    padding: 6px 10px;
    &:hover {
      background-color: $primary-color;
      color: $white;
    }
  }
}
.content-sub-text {
  font-size: 23px;
  font-family: $primary-font-regular;
  line-height: 37px;
  color: $secondary-color;
  @media only screen and (max-width: 990px) {
    font-size: 18px;
    line-height: 26px;
  }
}
.follow-us {
  margin-top: 38px;
  a {
    color: $primary-color;
    font-size: 24px;
    font-family: $primary-font-medium;
    padding: 0 20px;
    text-decoration: underline;
    @media only screen and (max-width: 570px) {
      font-size: 16px;
      //padding: 0 3px;
      display: flex;
      justify-content: center;
      align-items: center;
    }
    img {
      padding-right: 10px;
    }
  }
  .divider {
    color: #000;
    @media only screen and (max-width: 570px) {
      display: none;
    }
  }
}

.back-link {
  margin-bottom: 30px;
  margin-top: -25px;
  font-size: 18px;
  font-family: $cardtitle-font;
 
  a {
    // position: relative;
    top: -25px;
    color: $primary-color;
    &:after {
      background: url('../images/hamburger-arrow.svg') center right no-repeat;
    }
  }
}
/* ... */

